	so there are no stale pointers in accelerator tables left.

1998-04-22  Federico Mena Quintero  <federico@nuclecu.unam.mx>

	* gtk/gtkbin.c (gtk_bin_remove): Remember whether the widget was
	visible before we unparent it.

Wed Apr 22 04:15:26 1998  Tim Janik  <timj@gtk.org>

	* gtk/gtkmain.c (gtk_handle_current_timeouts): prepend the
 	running_timeouts list with the tmp_list link itself, not with a new
	GList structure pointing to our link. that would fill up memory and
	causes the GList.data fields of the running_timeouts list to point to
	GList structures and not GtkTimeoutFunction structures which is a
 	*really* bad thing.
	(gtk_handle_current_idles): likewise (exchange "timout" with "idle" in
	the above entry ;).

Sat Apr 18 22:18:12 1998  Tim Janik  <timj@gtk.org>

	* gtk/gtkradiomenuitem.h: 
	* gtk/gtkradiomenuitem.c (gtk_radio_menu_item_set_group): new function
	ala gtk_radio_button_set_group.
	(gtk_radio_menu_item_init): assure that we always have at least a group
	that points to self.

	* gtk/gtkradiobutton.c (gtk_radio_button_set_group): few cleanups and
 	added g_return_if_fail() statements.
	(gtk_radio_button_init): assure that we always have at least a group
	that points to self.

Fri Apr 17 03:05:05 1998  Tim Janik  <timj@gtk.org>

	* ChangeLog split up into ChangeLog.pre-1-0 and ChangeLog.

Wed Apr 15 05:13:09 1998  Tim Janik  <timj@gtk.org>

	* gtk/gtklabel.c (gtk_label_size_request): corrected a brace position
	(Damon Chaplin), which i got wrong when applying Damon's patch the last
 	time.

1998-04-14  Miguel de Icaza  <miguel@nuclecu.unam.mx>

	* gdk/gdkwindow.c (gdk_window_xid_at): Fix the problem introduced
	by whoever thought that randomly changing ints to unsigned int
	without reviewing the code was a good idea.  It is, btw not
	mentioned in the ChangeLog as usual, but I know it was not Elliot
	the culprit this time. 

Mon Apr 13 19:16:22 PDT 1998 Shawn T. Amundson <amundson@gtk.org>

	* Released GTK+ 1.0.0